# MedGuide-AI

./: README.md
root/: .gitignore
root/backend/: pyproject.toml
root/backend/app/: main.py
root/backend/app/api/v1/: health.py  router.py
root/backend/app/core/: config.py
root/backend/app/models/document/: conditions.py  diagnosis.py  document.py  extraction.py  operations.py
root/backend/app/services/ingestion/: parser_docx.py  parser_html.py
root/backend/app/services/storage/: fs.py
